; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/exca/extr_exca.c_exca_removal.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/exca/extr_exca.c_exca_removal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exca_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exca_removal(%struct.exca_softc* %0) #0 {
  %2 = alloca %struct.exca_softc*, align 8
  store %struct.exca_softc* %0, %struct.exca_softc** %2, align 8
  %3 = load %struct.exca_softc*, %struct.exca_softc** %2, align 8
  %4 = getelementptr inbounds %struct.exca_softc, %struct.exca_softc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @device_is_attached(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.exca_softc*, %struct.exca_softc** %2, align 8
  %10 = getelementptr inbounds %struct.exca_softc, %struct.exca_softc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @CARD_DETACH_CARD(i32 %11)
  br label %13

13:                                               ; preds = %8, %1
  ret void
}

declare dso_local i64 @device_is_attached(i32) #1

declare dso_local i32 @CARD_DETACH_CARD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
